Fix: Plural for Prometheus is Prometheis
After extensive research, it has been determined that the correct plural
for 'Prometheus' is 'Prometheis'. https://prometheus.io/docs/introduction/faq/#what-is-the-plural-of-prometheus

Let us use the correct plural, to avoid angering the Titan god of fire.

Since this is a breaking API change, VERSION was bumped accordingly. All
users of prometheus-operator will have to update their Charts. This is a small
sacrifice given the greater danger: One never knows, but the last thing
operators need is to have their holidays ruined by the wrath of Prometheus.

Happy Holidays everyone!

--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheis.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheis.yaml
@@ -6,13 +6,13 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
-  name: prometheuses.monitoring.coreos.com
+  name: prometheis.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
   names:
     kind: Prometheus
     listKind: PrometheusList
-    plural: prometheuses
+    plural: prometheis
     singular: prometheus
   scope: Namespaced
   versions:
@@ -21,7 +21,7 @@ spec:
       jsonPath: .spec.version
       name: Version
       type: string
-    - description: The desired replicas number of Prometheuses
+    - description: The desired replicas number of Prometheis
       jsonPath: .spec.replicas
       name: Replicas
       type: integer
