--- a/example/rbac/prometheus-operator/prometheus-operator-cluster-role.yaml
+++ b/example/rbac/prometheus-operator/prometheus-operator-cluster-role.yaml
@@ -13,8 +13,8 @@ rules:
   - alertmanagers
   - alertmanagers/finalizers
   - alertmanagerconfigs
-  - prometheuses
-  - prometheuses/finalizers
+  - prometheis
+  - prometheis/finalizers
   - thanosrulers
   - thanosrulers/finalizers
   - servicemonitors
