--- a/example/thanos/prometheus-cluster-role-binding.yaml
+++ b/example/thanos/prometheus-cluster-role-binding.yaml
@@ -4,6 +4,7 @@ metadata:
   name: prometheus-self
 roleRef:
   apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
   name: prometheus-self
 subjects:
 - kind: ServiceAccount
