feat(3848): Allow users to enable prometheus feature flags (#3878)
* feat(3848) Allow users to enable prometheus feature flags

* Update pkg/apis/monitoring/v1/types.go

Co-authored-by: Simon Pasquier <spasquie@redhat.com>

* Update pkg/prometheus/statefulset.go

Co-authored-by: Simon Pasquier <spasquie@redhat.com>

* Update pkg/prometheus/statefulset_test.go

Co-authored-by: Simon Pasquier <spasquie@redhat.com>

* Rebuild doc

Co-authored-by: Simon Pasquier <spasquie@redhat.com>

--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -1466,6 +1466,11 @@ spec:
               enableAdminAPI:
                 description: 'Enable access to prometheus web admin API. Defaults to the value of `false`. WARNING: Enabling the admin APIs enables mutating endpoints, to delete data, shutdown Prometheus, and more. Enabling this should be done with care and the user is advised to add additional authentication authorization via a proxy to ensure only clients authorized to perform these actions can do so. For more information see https://prometheus.io/docs/prometheus/latest/querying/api/#tsdb-admin-apis'
                 type: boolean
+              enableFeatures:
+                description: Enable access to Prometheus disabled features. By default, no features are enabled. Enabling disabled features is entirely outside the scope of what the maintainers will support and by doing so, you accept that this behaviour may break at any time without notice. For more information see https://prometheus.io/docs/prometheus/latest/disabled_features/
+                items:
+                  type: string
+                type: array
               enforcedNamespaceLabel:
                 description: EnforcedNamespaceLabel enforces adding a namespace label of origin for each alert and metric that is user created. The label value will always be the namespace of the object that is being created.
                 type: string
